Fixed SASS File Path Issues

--- a/templates/common/app/styles/main.scss
+++ b/templates/common/app/styles/main.scss
@@ -3,7 +3,7 @@ $icon-font-path: "../fonts/";
 
 @import "mixins.scss";
 @import "variables.scss";
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap";
+@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
 @import "theme.scss";
 
 
