--- a/templates/common/app/styles/_theme.scss
+++ b/templates/common/app/styles/_theme.scss
@@ -10,8 +10,8 @@
 
 @import url("//fonts.googleapis.com/css?family=Roboto:300,400,500");
 
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap/mixins";
+@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
+@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins";
 
 th {
 	font-weight: 500;
